implemented interfaces and abstract classes